Move image assets to a public folder

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
             <div class="card" id="movie1">
               
-              <img class="card-img-top" src="./themuppets.jpg" alt="The Muppets Poster">
+              <img class="card-img-top" src="public/themuppets.jpg" alt="The Muppets Poster">
               <div class="card-body text-body">
                 <h5 class="card-title">The Muppets</h5>
                 <p class="card-text">A Muppet fanatic with some help from his 2 human compatriots must regroup the Muppet gang to stop an avaricious oil
@@ -207,7 +207,7 @@
             </div>
                  
             <div class="card" id="movie2">
-              <img class="card-img-top" src="./thewizardofoz.jpg" alt="The Wizard of Oz Poster">
+              <img class="card-img-top" src="public/thewizardofoz.jpg" alt="The Wizard of Oz Poster">
               <div class="card-body text-body">
                 <h5 class="card-title">The Wizard of Oz</h5>
                 <p class="card-text">Dorothy Gale is swept away from a farm in Kansas to a magical land of Oz in a tornado and embarks on a quest with her
@@ -233,7 +233,7 @@
             </div>
 
             <div class="card" id="movie3">
-              <img class="card-img-top" src="./themummy.jpg" alt="The Mummy Poster ">
+              <img class="card-img-top" src="public/themummy.jpg" alt="The Mummy Poster ">
               <div class="card-body text-body">
                 <h5 class="card-title">The Mummy</h5>
                 <p class="card-text">A resurrected Egyptian mummy stalks a beautiful woman he believes to be the reincarnation of his lover and bride. 1932. Projection: August 5 at 8pm</p>
@@ -280,7 +280,7 @@
     <div class="card-group shadow-sm">
 
         <div class="card"  id="movie4">
-            <img class="card-img-top" src="./thegoonies.jpg" alt="The Goonies Poster">
+            <img class="card-img-top" src="public/thegoonies.jpg" alt="The Goonies Poster">
             <div class="card-body text-body">
             <h5 class="card-title">The Goonies</h5>
         <p class="card-text">In order to save their home from foreclosure, a group of misfits set out to find a pirate's ancient valuable treasure. 1985. Projection: August 5 at 7pm</p>
@@ -305,7 +305,7 @@
         </div>
 
         <div class="card"  id="movie5">
-            <img class="card-img-top" src="./fame.jpg" alt="Fame poster">
+            <img class="card-img-top" src="public/fame.jpg" alt="Fame poster">
             <div class="card-body text-body">
             <h5 class="card-title">Fame</h5>
         <p class="card-text">A chronicle of the lives of several teenagers who attend a New York high school for students gifted in the performing
@@ -331,7 +331,7 @@
         </div>
 
         <div class="card" id="movie6">
-            <img class="card-img-top" src="./halloween.jpg" alt="Halloween poster">
+            <img class="card-img-top" src="public/halloween.jpg" alt="Halloween poster">
             <div class="card-body text-body">
             <h5 class="card-title">Halloween</h5>
         <p class="card-text">Fifteen years after murdering his sister on Halloween night 1963, Michael Myers escapes from a mental hospital and
@@ -378,7 +378,7 @@
   <div class="card-group shadow-sm">
 
     <div class="card" id="movie7">
-      <img class="card-img-top" src="./fantasia.jpg" alt="Fantasia poster">
+      <img class="card-img-top" src="public/fantasia.jpg" alt="Fantasia poster">
       <div class="card-body text-body">
         <h5 class="card-title">Fantasia</h5>
   <p class="card-text"> A collection of animated interpretations of great works of Western classical music. 1940. Projection: August 7 at 6pm</p>
@@ -403,7 +403,7 @@
     </div>
 
     <div class="card" id="movie8">
-      <img class="card-img-top" src="./metropolis.jpg" alt="Metropolis poster">
+      <img class="card-img-top" src="public/metropolis.jpg" alt="Metropolis poster">
       <div class="card-body text-body">
         <h5 class="card-title">Metropolis</h5>
   <p class="card-text">In a futuristic city sharply divided between the working class and the city planners, the son of the city's mastermind falls in love with a working class prophet who predicts the coming of a savior to mediate their differences. 1927. Projection: August 8 at 6pm</p>
@@ -428,7 +428,7 @@
     </div>
 
     <div class="card" id="movie9">
-      <img class="card-img-top" src="./mrsdoubtfire.jpg" alt="Mrs Doubtfire">
+      <img class="card-img-top" src="public/mrsdoubtfire.jpg" alt="Mrs Doubtfire">
       <div class="card-body text-body">
         <h5 class="card-title">Mrs Doubtfire</h5>
   <p class="card-text">After a bitter divorce, an actor disguises himself as a female housekeeper to spend time with his children held in custody by his former wife. 1993. Projection: August 8 at 9pm</p>
@@ -470,7 +470,7 @@
   <div class="card-group shadow-sm">
 
     <div class="card" id="movie10">
-      <img class="card-img-top" src="./2001spaceodyssey.jpg" alt="2001 A Space Odyssey">
+      <img class="card-img-top" src="public/2001spaceodyssey.jpg" alt="2001 A Space Odyssey">
       <div class="card-body text-body">
         <h5 class="card-title">2001 A Space Odyssey</h5>
         <p class="card-text">A space-opera spanning the dawn of man to humanity reaching the stars, 2001: A Space Odyssey tells the story of the
@@ -496,7 +496,7 @@
     </div>
 
     <div class="card" id="movie11">
-      <img class="card-img-top" src="./dune.jpg" alt="Dune poster">
+      <img class="card-img-top" src="public/dune.jpg" alt="Dune poster">
       <div class="card-body text-body">
         <h5 class="card-title">Dune</h5>
         <p class="card-text">A Duke's son leads desert warriors against the galactic emperor and his father's evil nemesis when they assassinate his
@@ -522,7 +522,7 @@
     </div>
 
     <div class="card" id="movie12">
-      <img class="card-img-top" src="./themask.jpg" alt="The Mask">
+      <img class="card-img-top" src="public/themask.jpg" alt="The Mask">
       <div class="card-body text-body">
         <h5 class="card-title">The Mask</h5>
         <p class="card-text">Bank clerk Stanley Ipkiss is transformed into a manic superhero when he wears a mysterious mask. 1994. Projection: August 8 at 9pm</p>
